--- a/cppsrc/CMakeLists.txt
+++ b/cppsrc/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(yamlcpp REQUIRED)
 find_package(nanomsg REQUIRED)
 find_package(cereal REQUIRED)
 find_package(libmongoc-1.0 REQUIRED)
+find_package(log4cplus REQUIRED)
 
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_DIRS})
@@ -30,7 +31,7 @@ INCLUDE_DIRECTORIES(${YAMLCPP_INCLUDE_DIR})
 include_directories(${NANOMSG_INCLUDE_DIR})
 include_directories(${CEREAL_INCLUDE_DIR})
 include_directories(${MONGOC_INCLUDE_DIRS})
-
+include_directories(${LOG4CPLUS_INCLUDE_DIRS})
 
 
 ADD_DEFINITIONS("-std=gnu++17 -DIB_USE_STD_STRING ")
