--- a/cppsrc/StarQuant/CMakeLists.txt
+++ b/cppsrc/StarQuant/CMakeLists.txt
@@ -27,5 +27,5 @@ add_library(starquant SHARED ${StarQuantCppSrc})
 set_target_properties(starquant  PROPERTIES COMPILE_FLAGS "-fPIC")
 target_link_libraries(starquant  ${Boost_LIBRARIES} ${PYTHON_LIBRARY} ${MONGOC_LIBRARIES} ${LOG4CPLUS_LIBRARIES} ${YAMLCPP_LIBRARY} LinuxDataCollect thosttraderapi thostmduserapi TapQuoteAPI TapTradeAPI  ${NANOMSG_LIBRARY_SHARED} pthread dl util m)
 set(SQSERVER_SRC  ./Services/sqserver.cpp )
-add_executable(sqserver ${SQSERVER_SRC})
-TARGET_LINK_LIBRARIES(sqserver starquant)
+add_executable(sqserver.exe ${SQSERVER_SRC})
+TARGET_LINK_LIBRARIES(sqserver.exe starquant)
