--- a/cppsrc/StarQuant/CMakeLists.txt
+++ b/cppsrc/StarQuant/CMakeLists.txt
@@ -25,7 +25,23 @@ set(StarQuantCppSrc
 
 add_library(starquant SHARED ${StarQuantCppSrc})
 set_target_properties(starquant  PROPERTIES COMPILE_FLAGS "-fPIC")
-target_link_libraries(starquant  ${Boost_LIBRARIES} ${PYTHON_LIBRARY} ${MONGOC_LIBRARIES} ${LOG4CPLUS_LIBRARIES} ${YAMLCPP_LIBRARY} LinuxDataCollect thosttraderapi thostmduserapi TapQuoteAPI TapTradeAPI  ${NANOMSG_LIBRARY_SHARED} pthread dl util m)
+target_link_libraries(starquant  
+  ${Boost_LIBRARIES} 
+  ${PYTHON_LIBRARY} 
+  ${MONGOC_LIBRARIES} 
+  ${LOG4CPLUS_LIBRARIES} 
+  ${YAMLCPP_LIBRARY} 
+  ${FMT_LIBRARIES} 
+  ${NANOMSG_LIBRARY_SHARED}
+  LinuxDataCollect 
+  thosttraderapi 
+  thostmduserapi 
+  TapQuoteAPI 
+  TapTradeAPI
+  pthread 
+  dl 
+  util
+  m)
 set(SQSERVER_SRC  ./Services/sqserver.cpp )
 add_executable(sqserver.exe ${SQSERVER_SRC})
 TARGET_LINK_LIBRARIES(sqserver.exe starquant)
