mod:rm unused package in cmakelist

--- a/cppsrc/CMakeLists.txt
+++ b/cppsrc/CMakeLists.txt
@@ -14,23 +14,23 @@ include(ExternalProject)
 find_package(ZLIB REQUIRED)
 find_package(PkgConfig)
 find_package(Boost REQUIRED COMPONENTS system filesystem regex thread python3 locale date_time)
-find_package(rapidjson REQUIRED)
+# find_package(rapidjson REQUIRED)
 FIND_PACKAGE(PythonInterp)
 FIND_PACKAGE(PythonLibs)
 find_package(yamlcpp REQUIRED)
 find_package(nanomsg REQUIRED)
-find_package(cereal REQUIRED)
+# find_package(cereal REQUIRED)
 find_package(libmongoc-1.0 REQUIRED)
 find_package(log4cplus REQUIRED)
 find_package(fmt REQUIRED)
 
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
-INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_DIRS})
+# INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${YAMLCPP_INCLUDE_DIR})
 include_directories(${NANOMSG_INCLUDE_DIR})
-include_directories(${CEREAL_INCLUDE_DIR})
+# include_directories(${CEREAL_INCLUDE_DIR})
 include_directories(${MONGOC_INCLUDE_DIRS})
 include_directories(${LOG4CPLUS_INCLUDE_DIRS})
 include_directories(${FMT_INCLUDE_DIRS})
